--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="line"></div>
       </div>
     </nav>
-    <header class="home">
+    <header class="home" id="home">
       <section class="stars-content">
         <span class="star star1"></span>
         <span class="star star2"></span>
@@ -143,7 +143,7 @@
         />
       </div>
     </header>
-    <div class="services">
+    <div class="services" id="services">
       <h2 class="titles">Servicios</h2>
       <div class="modal-container">
         <div class="modal">
@@ -197,7 +197,7 @@
         </div>
       </div>
     </div>
-    <main class="projects">
+    <main class="projects" id="projects">
       <h2 class="titles">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
@@ -338,7 +338,7 @@
         </article>
       </div>
     </main>
-    <footer class="contact">
+    <footer class="contact" id="contact">
       <div class="contact__window">
         <span class="contact__window__span">Correo enviado con exito!</span>
       </div>
