Actualizacion de los proyecto con las imagenes mas optimizadas

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Url Shortering</h3>
             <p class="projects__card__paragraph">
-              Página web integrada con un acortador de enlaces.
+              Acortador de enlaces guardados en el Local Storage.
             </p>
             <a
               class="projects__card__btn"
@@ -222,6 +222,55 @@
             >
           </div>
         </article>
+
+        <article class="projects__card">
+          <a href="https://happy-khorana-333537.netlify.app/" target="_blank">
+            <img
+              class="projects__img"
+              src="./Archivos/IP-address-tracker.jpg"
+              alt="Proyecto IP Address Tracker"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">IP address tracker</h3>
+            <p class="projects__card__paragraph">
+              Rastreador de direcciones IP con la ubicación en el mapa.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://happy-khorana-333537.netlify.app/"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+        <article class="projects__card">
+          <a
+            href="https://gallant-hamilton-4dd930.netlify.app/"
+            target="_blank"
+          >
+            <img
+              class="projects__img"
+              src="./Archivos/rest-countries-api.png"
+              alt="Proyecto Rest countries API"
+              loading="lazy"
+            />
+          </a>
+          <div class="projects__card__content">
+            <h3 class="projects__card__title">Rest countries API</h3>
+            <p class="projects__card__paragraph">
+              Busqueda e informacion  dinámica sobre todos los paises.
+            </p>
+            <a
+              class="projects__card__btn"
+              target="_blank"
+              href="https://gallant-hamilton-4dd930.netlify.app/"
+              >Ver proyecto</a
+            >
+          </div>
+        </article>
+
         <article class="projects__card">
           <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
             <img
@@ -245,51 +294,6 @@
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://happy-khorana-333537.netlify.app/" target="_blank">
-            <img
-              class="projects__img"
-              src="./Archivos/ip-tracker.jpg"
-              alt="Proyecto IP Address Tracker"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">IP address tracker</h3>
-            <p class="projects__card__paragraph">
-              Proyecto web para rastrear las direcciones IP
-            </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://happy-khorana-333537.netlify.app/"
-              >Ver proyecto</a
-            >
-          </div>
-        </article>
-        <article class="projects__card">
-          <a href="https://friendly-galileo-025863.netlify.app" target="_blank">
-            <img
-              class="projects__img"
-              src="./Archivos/countdown-timer.png"
-              alt="Proyecto Countdown Timer"
-              loading="lazy"
-            />
-          </a>
-          <div class="projects__card__content">
-            <h3 class="projects__card__title">Countdown timer</h3>
-            <p class="projects__card__paragraph">
-              Cuenta regresiva para publicar mi siguiente proyecto.
-            </p>
-            <a
-              class="projects__card__btn"
-              target="_blank"
-              href="https://friendly-galileo-025863.netlify.app"
-              >Ver proyecto</a
-            >
-          </div>
-        </article>
-
-        <article class="projects__card">
           <a
             href="https://suspicious-bartik-c505d4.netlify.app/"
             target="_blank"
@@ -304,7 +308,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Todo App</h3>
             <p class="projects__card__paragraph">
-              Aplicacion de tareas pendientes con un reordenamiento dinámico.
+              Aplicacion de tareas con un reordenamiento dinámico.
             </p>
             <a
               class="projects__card__btn"
@@ -318,7 +322,7 @@
           <a href="https://elated-banach-060921.netlify.app/" target="_blank">
             <img
               class="projects__img"
-              src="./Archivos/card-pokemon.png"
+              src="./Archivos/card-pokemon.jpg"
               alt="Proyecto Random Pokemon"
               loading="lazy"
             />
@@ -326,7 +330,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Card Pokemon</h3>
             <p class="projects__card__paragraph">
-              Carta de un Pokémon aleatorio al recargar la página.
+              Carta de un Pokémon aleatorio con el efecto parallax.
             </p>
             <a
               class="projects__card__btn"
@@ -382,6 +386,5 @@
         </button>
       </form>
     </footer>
-
   </body>
 </html>
