Semantica de clases

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="portafolio,portafolio web,diseño,diseño ux ui,desarrollador,desarrollador front end,mantenimiento web,diseño web front end,freelancer,freelance"
+      content="portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño,diseñador web,ux ui,freelance,freelancer"
     />
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <nav class="nav">
+    <nav class="nav" id="navbar">
       <a href="#home"
         ><img src="./Archivos/logo.jpg" alt="logo de un rayo" class="nav__logo"
       /></a>
@@ -144,7 +144,7 @@
       </div>
     </header>
     <div class="services" id="services">
-      <h2 class="titles">Servicios</h2>
+      <h2 class="sub-titles">Servicios</h2>
       <div class="modal-container">
         <div class="modal">
           <h3 class="modal__title">Tecnologías</h3>
@@ -155,50 +155,50 @@
           <button class="modal__btn">OK</button>
         </div>
       </div>
-      <div class="services__container-divs">
-        <div class="services__information">
+      <div class="services__container-flex">
+        <div class="services__section">
           <img
-            class="services__information__img"
+            class="services__section__img"
             src="./Archivos/app_development_SVG.svg"
             alt="Imagen isometrica Frontend"
           />
-          <h3 class="services__information__title">Desarrollo Frontend</h3>
-          <p class="services__information__paragraph">
+          <h3 class="services__section__title">Desarrollo Frontend</h3>
+          <p class="services__section__paragraph">
             Creación y maquetacion de una pagina web dinámica y responsiva en el
             lado del cliente.
           </p>
-          <a class="frontend services__information__view-more">Ver mas</a>
+          <a class="frontend services__section__view-more">Ver mas</a>
         </div>
-        <div class="services__information">
+        <div class="services__section">
           <img
-            class="services__information__img"
+            class="services__section__img"
             src="./Archivos/Web_design_SVG.svg"
             alt="Imagen isometrica Frontend"
           />
-          <h3 class="services__information__title">Diseño UX / UI</h3>
-          <p class="services__information__paragraph">
+          <h3 class="services__section__title">Diseño UX / UI</h3>
+          <p class="services__section__paragraph">
             Diseño web con la experiencia de usuario e interfaz optima que
             tengas en mente para tu proyecto.
           </p>
-          <a class="design services__information__view-more">Ver mas</a>
+          <a class="design services__section__view-more">Ver mas</a>
         </div>
-        <div class="services__information">
+        <div class="services__section">
           <img
-            class="services__information__img"
+            class="services__section__img"
             src="./Archivos/Startup_SVG.svg"
             alt="Imagen isometrica Frontend"
           />
-          <h3 class="services__information__title">Mantenimiento Web</h3>
-          <p class="services__information__paragraph">
+          <h3 class="services__section__title">Mantenimiento Web</h3>
+          <p class="services__section__paragraph">
             Mantenimiento para tu pagina web y la renovación con el mejor
             Hosting cuando lo necesites.
           </p>
-          <a class="maintenance services__information__view-more">Ver mas</a>
+          <a class="maintenance services__section__view-more">Ver mas</a>
         </div>
       </div>
     </div>
     <main class="projects" id="projects">
-      <h2 class="titles">Proyectos</h2>
+      <h2 class="sub-titles">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
           <a href="https://hungry-neumann-69f37d.netlify.app/" target="_blank">
@@ -260,7 +260,7 @@
           <div class="projects__card__content">
             <h3 class="projects__card__title">Rest countries API</h3>
             <p class="projects__card__paragraph">
-              Busqueda e informacion  dinámica sobre todos los paises.
+              Busqueda e informacion dinámica sobre todos los paises.
             </p>
             <a
               class="projects__card__btn"
@@ -346,7 +346,7 @@
       <div class="contact__window">
         <span class="contact__window__span">Correo enviado con exito!</span>
       </div>
-      <h2 class="titles">Contáctame</h2>
+      <h2 class="sub-titles">Contáctame</h2>
       <form
         action="https://formspree.io/f/mjvjjqgw"
         method="POST"
