--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
           class="contact__input"
           type="email"
           placeholder="Correo Electronico"
+          pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$"
           required
         />
         <textarea
