mejora el efecto glow y corrige nombre de proyecto

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <h2 class="sub-titles">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
-          <a href="https://blissful-rosalind-df439d.netlify.app/" target="_blank">
+          <a href="https://space-tourism-nuxt.vercel.app/" target="_blank">
             <img
               class="projects__img"
               src="./Archivos/space-tourism.jpg"
@@ -210,14 +210,14 @@
             />
           </a>
           <div class="projects__card__content">
-            <h3 class="projects__card__title">Space Tourims</h3>
+            <h3 class="projects__card__title">Space Tourism</h3>
             <p class="projects__card__paragraph">
               Sitio web multi pagina - Proyecto de Frontend Mentor.
             </p>
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://blissful-rosalind-df439d.netlify.app/"
+              href="https://space-tourism-nuxt.vercel.app/"
               >Ver proyecto</a
             >
           </div>
