añade una mejor descripcion

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Web - Eduardo Maximiliano Desarrollador Frontend</title>
+    <title>Portafolio - Eduardo Maximiliano Desarrollador Front-end</title>
     <meta
       name="description"
-      content="Desarrollador Web enfocado en el Frontend y diseño UI/UX"
+      content="Creativo y entusiasta Desarrollador Web Front-End que está
+      constantemente aprendiendo nuevas tecnologías y habilidades con un
+      gran gusto en el Diseño UX/UI."
     />
     <meta
       name="keywords"
-      content="portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño,diseñador web,ux ui,freelance,freelancer"
+      content="portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño,diseñador web,ux ui,freelancer,maximo 4ever"
     />
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
@@ -30,7 +32,7 @@
   <body>
     <nav class="nav" id="navbar">
       <a href="#home"
-        ><img src="./Archivos/logo.jpg" alt="logo de un rayo" class="nav__logo"
+        ><img src="./Archivos/logo.jpg" alt="Maximo 4ever - Logo" class="nav__logo"
       /></a>
       <ul class="nav__menu">
         <li class="nav__menu__li">
@@ -53,22 +55,22 @@
       </div>
     </nav>
     <header class="home" id="home">
-      <section class="stars-content">
+      <div class="stars-content">
         <span class="star star1"></span>
         <span class="star star2"></span>
         <span class="star star3"></span>
         <span class="star star4"></span>
         <span class="star star5"></span>
         <span class="star star6"></span>
-      </section>
-      <div class="home__text">
+      </div>
+      <article class="home__text">
         <h2 class="home__title h2">HOLA MI NOMBRE ES</h2>
         <h1 class="home__title h1">EDUARDO MAXIMILIANO</h1>
-        <h3 class="home__title h3">DESARROLLADOR FRONTEND</h3>
+        <h3 class="home__title h3">DESARROLLADOR FRONT-END</h3>
         <p class="home__paragraph">
-          Soy un Desarrollador Web Freelancer especializado hacia el Frontend y
-          el Diseño con las tecnologías dominantes HTML, CSS y JavaScript. No
-          dudes en contactarme.
+          Soy un Creativo y entusiasta Desarrollador Web Front-End que está
+          constantemente aprendiendo nuevas tecnologías y habilidades con un
+          gran gusto en el Diseño UX/UI.
         </p>
         <div class="social">
           <a
@@ -134,12 +136,12 @@
             </svg>
           </a>
         </div>
-      </div>
+      </article>
       <div class="home__container-img">
         <img
           class="home__container-img__img"
           src="./Archivos/Coding_SVG.svg"
-          alt="Imagen ilustrativa codeando"
+          alt="Imagen ilustrativa programando"
         />
       </div>
     </header>
@@ -160,7 +162,7 @@
           <img
             class="services__section__img"
             src="./Archivos/app_development_SVG.svg"
-            alt="Imagen isometrica Frontend"
+            alt="Imagen isometrica - Frontend"
           />
           <h3 class="services__section__title">Desarrollo Frontend</h3>
           <p class="services__section__paragraph">
@@ -173,7 +175,7 @@
           <img
             class="services__section__img"
             src="./Archivos/Web_design_SVG.svg"
-            alt="Imagen isometrica Frontend"
+            alt="Imagen isometrica - Diseño UX/UI"
           />
           <h3 class="services__section__title">Diseño UX / UI</h3>
           <p class="services__section__paragraph">
@@ -186,7 +188,7 @@
           <img
             class="services__section__img"
             src="./Archivos/Startup_SVG.svg"
-            alt="Imagen isometrica Frontend"
+            alt="Imagen isometrica - Mantenimiento"
           />
           <h3 class="services__section__title">Mantenimiento Web</h3>
           <p class="services__section__paragraph">
@@ -205,7 +207,7 @@
             <img
               class="projects__img"
               src="./Archivos/space-tourism.jpg"
-              alt="Proyecto Random Pokemon"
+              alt="Proyecto Space Tourism"
               loading="lazy"
             />
           </a>
@@ -274,7 +276,7 @@
             <img
               class="projects__img"
               src="./Archivos/shortly.png"
-              alt="Proyecto Shortly"
+              alt="Proyecto Url Shortly"
               loading="lazy"
             />
           </a>
@@ -321,7 +323,7 @@
             <img
               class="projects__img"
               src="./Archivos/todo-app.jpg"
-              alt="Proyecto todo-app"
+              alt="Proyecto Todo App"
               loading="lazy"
             />
           </a>
