Cambia el alojamiento web de los proyectos

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio - Eduardo Maximiliano Desarrollador Front-end</title>
+    <title>Eduardo Maximiliano - Desarrollador Web & Diseñador UI/UX</title>
     <meta
       name="description"
       content="Creativo y entusiasta Desarrollador Web Front-End que está
       constantemente aprendiendo nuevas tecnologías y habilidades con un
-      gran gusto en el Diseño UX/UI."
+      gran gusto en el Diseño UI/UX."
     />
     <meta
       name="keywords"
@@ -32,7 +32,10 @@
   <body>
     <nav class="nav" id="navbar">
       <a href="#home"
-        ><img src="./Archivos/logo.jpg" alt="Maximo 4ever - Logo" class="nav__logo"
+        ><img
+          src="./Archivos/logo.jpg"
+          alt="Maximo 4ever - Logo"
+          class="nav__logo"
       /></a>
       <ul class="nav__menu">
         <li class="nav__menu__li">
@@ -70,7 +73,7 @@
         <p class="home__paragraph">
           Soy un Creativo y entusiasta Desarrollador Web Front-End que está
           constantemente aprendiendo nuevas tecnologías y habilidades con un
-          gran gusto en el Diseño UX/UI.
+          gran gusto en el Diseño UI/UX.
         </p>
         <div class="social">
           <a
@@ -177,7 +180,7 @@
             src="./Archivos/Web_design_SVG.svg"
             alt="Imagen isometrica - Diseño UX/UI"
           />
-          <h3 class="services__section__title">Diseño UX / UI</h3>
+          <h3 class="services__section__title">Diseño UI / UX</h3>
           <p class="services__section__paragraph">
             Diseño web con la experiencia de usuario e interfaz optima que
             tengas en mente para tu proyecto.
@@ -203,7 +206,10 @@
       <h2 class="sub-titles">Proyectos</h2>
       <div class="projects__grid">
         <article class="projects__card">
-          <a href="https://space-tourism-nuxt.vercel.app/" target="_blank">
+          <a
+            href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
+            target="_blank"
+          >
             <img
               class="projects__img"
               src="./Archivos/space-tourism.jpg"
@@ -219,14 +225,14 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://space-tourism-nuxt.vercel.app/"
+              href="https://space-tourism-nuxt-maximo-4ever.vercel.app/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
           <a
-            href="https://gallant-hamilton-4dd930.netlify.app/"
+            href="https://maximo-4ever.github.io/Rest-countries-API/"
             target="_blank"
           >
             <img
@@ -244,13 +250,16 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://gallant-hamilton-4dd930.netlify.app/"
+              href="https://maximo-4ever.github.io/Rest-countries-API/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://happy-khorana-333537.netlify.app/" target="_blank">
+          <a
+            href="https://maximo-4ever.github.io/IP-Address-Tracker/"
+            target="_blank"
+          >
             <img
               class="projects__img"
               src="./Archivos/IP-address-tracker.jpg"
@@ -266,13 +275,16 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://happy-khorana-333537.netlify.app/"
+              href="https://maximo-4ever.github.io/IP-Address-Tracker/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://hungry-neumann-69f37d.netlify.app/" target="_blank">
+          <a
+            href="https://maximo-4ever.github.io/Url-Shortening-Api/"
+            target="_blank"
+          >
             <img
               class="projects__img"
               src="./Archivos/shortly.png"
@@ -288,13 +300,16 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://hungry-neumann-69f37d.netlify.app/"
+              href="https://maximo-4ever.github.io/Url-Shortening-Api/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
-          <a href="https://elastic-spence-6ab64a.netlify.app" target="_blank">
+          <a
+            href="https://maximo-4ever.github.io/Fylo-Dark-Theme/"
+            target="_blank"
+          >
             <img
               class="projects__img"
               src="./Archivos/fylo-dark.png"
@@ -310,16 +325,13 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://elastic-spence-6ab64a.netlify.app"
+              href="https://maximo-4ever.github.io/Fylo-Dark-Theme/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
-          <a
-            href="https://suspicious-bartik-c505d4.netlify.app/"
-            target="_blank"
-          >
+          <a href="https://app-todo-maximo-4ever.vercel.app/" target="_blank">
             <img
               class="projects__img"
               src="./Archivos/todo-app.jpg"
@@ -335,7 +347,7 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://suspicious-bartik-c505d4.netlify.app/"
+              href="https://app-todo-maximo-4ever.vercel.app/"
               >Ver proyecto</a
             >
           </div>
