Arregla el enlace de los proyectos en Github

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eduardo Maximiliano - Desarrollador Web & Diseñador UI/UX</title>
+    <title>Eduardo Maximiliano | Desarrollador Web & Diseñador UI/UX</title>
     <meta
       name="description"
       content="Creativo y entusiasta Desarrollador Web Front-End que está
@@ -12,11 +12,11 @@
     />
     <meta
       name="keywords"
-      content="portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño,diseñador web,ux ui,freelancer,maximo 4ever"
+      content="Eduardo Maximiliano,portafolio,desarrollador,desarrollador web,desarrollador front end,mantenimiento web,diseño web,diseñador web,ui ux,freelance,maximo4ever"
     />
     <meta name="robots" content="index,nofollow" />
     <meta name="author" content="Eduardo maximiliano" />
-    <link rel="canonical" href="https://maximo-4ever.github.io/" />
+    <link rel="canonical" href="https://maximo4ever.github.io/" />
     <link rel="icon" href="Archivos/logo.jpg" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
@@ -120,7 +120,7 @@
           <a
             class="social__a"
             target="_blank"
-            href="https://github.com/Maximo-4ever"
+            href="https://github.com/Maximo4ever"
           >
             <svg
               aria-hidden="true"
@@ -232,7 +232,7 @@
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo-4ever.github.io/Rest-countries-API/"
+            href="https://Maximo4ever.github.io/Rest-countries-API/"
             target="_blank"
           >
             <img
@@ -250,14 +250,14 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://maximo-4ever.github.io/Rest-countries-API/"
+              href="https://Maximo4ever.github.io/Rest-countries-API/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo-4ever.github.io/IP-Address-Tracker/"
+            href="https://Maximo4ever.github.io/IP-Address-Tracker/"
             target="_blank"
           >
             <img
@@ -275,14 +275,14 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://maximo-4ever.github.io/IP-Address-Tracker/"
+              href="https://maximo4ever.github.io/IP-Address-Tracker/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo-4ever.github.io/Url-Shortening-Api/"
+            href="https://maximo4ever.github.io/Url-Shortening-Api/"
             target="_blank"
           >
             <img
@@ -300,14 +300,14 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://maximo-4ever.github.io/Url-Shortening-Api/"
+              href="https://maximo4ever.github.io/Url-Shortening-Api/"
               >Ver proyecto</a
             >
           </div>
         </article>
         <article class="projects__card">
           <a
-            href="https://maximo-4ever.github.io/Fylo-Dark-Theme/"
+            href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
             target="_blank"
           >
             <img
@@ -325,7 +325,7 @@
             <a
               class="projects__card__btn"
               target="_blank"
-              href="https://maximo-4ever.github.io/Fylo-Dark-Theme/"
+              href="https://maximo4ever.github.io/Fylo-Dark-Theme/"
               >Ver proyecto</a
             >
           </div>
@@ -365,7 +365,7 @@
         class="contact__form"
       >
         <label class="contact__form__title">
-          ¿Tienes alguna página en mente? Envíame un email y nos ponemos en
+          ¿Tienes alguna página web en mente? Envíame un email y nos ponemos en
           contacto 🧑‍💻
         </label>
         <input
